Support choosing .ico files in custom icon file chooser

Summary:
.ico files work fine, so we should allow them to be chosen in the custom icon file chooser dialog.

BUG: 233201
FIXED-IN: 5.48

Test Plan:
- Find a .ico file lying around, or turn a .png file into a .ico file using https://convertico.com/
- Typ to apply it to a folder in Dolphin
- You can select the .ico file in the dialog, and when applied, it appears correctly as a custom icon for the folder

Reviewers: #frameworks, cfeck

Reviewed By: cfeck

Subscribers: broulik, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D13718